---
source: analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: incorrect type for `foo` argument `val`
  ┌─ tests/fixtures/errors/return_call_to_fn_with_param_type_mismatch.fe:7:25
  │
7 │         return self.foo(100)
  │                         ^^^ this has type `u256`; expected type `address`


